# streams

./: .gitignore  README.md  ex1_1.py
basics/: README.md  pyproject.toml
basics/kunal_wf_basics/: commands.py  input.txt  processing_functions.py  stream_adapter_functions.py  stream_functions.py  yaml_reader.py
drills/: ex1_1.py  ex1_10.py  ex1_2.py  ex1_3.py  ex1_4.py  ex1_5.py  ex1_6.py  ex1_7.py  ex1_8.py  ex1_9.py  output.txt  sample.txt  sample2.txt
dynamic/: README.md  config.yaml  dynamic.py
stream/: commands.py  stream.py
