[project]
name = "kunal-wf-basics"
version = "0.1.4"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer (>=0.15.1,<0.16.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
kunal_wf_basics = "kunal_wf_basics.commands:app"


[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"